# oj-eval-openhands-072-20260424224405

./: .gitignore  CMakeLists.txt
src/: main.cpp
